TEZ-4719: Move to Junit6 (#502) (Raghav Aggarwal reviewed by Laszlo Bodor)